@@ -42,8 +42,8 @@
     <profile>
       <id>examples</id>
       <modules>
-        <module>examples/java</module>
         <module>examples/scala</module>
+        <module>examples/java</module>
         <module>examples/clojure</module>
         <module>examples/ioke</module>
         <module>examples/groovy</module>
@@ -60,8 +60,8 @@
       <id>win</id>
       <modules>
         <!-- The clojure example fails on windows. Can't load calculator.clj -->
-        <module>examples/java</module>
         <module>examples/scala</module>
+        <module>examples/java</module>
         <module>examples/ioke</module>
         <module>examples/groovy</module>
         <module>examples/spring</module>
